--- a/references.bib
+++ b/references.bib
@@ -1016,6 +1016,16 @@ title = {{3D Imaging of a Dislocation Loop at the Onset of Plasticity in an Inde
 volume = {17},
 year = {2017}
 }
+
+@report{Marchesini2003a,
+   abstract = {The inversion of a diffraction pattern offers aberration-free diffraction-limited 3D images without the resolution and depth-of-field limitations of lens-based tomographic systems, the only limitation being radiation damage. We review our recent experimental results, in which X-ray images were reconstructed from the diffraction pattern alone. A preliminary analysis of the radiation dose needed for CXDI imaging and the dose tolerance of frozen-hydrated life-science samples suggests},
+   author = {S Marchesini and H N Chapman and S P Hau-Riege and R A London and A Szoke and H He and M R Howells and H Padmore and R Rosen and J C H Spence and U Weierstall},
+   title = {Coherent X-ray diffractive imaging: applications and limitations},
+   url = {http://www-hasylab.desy.de/facility/fel/vuv/main.htm},
+   year = {2003},
+}
+
+
 @article{Marchesini2007,
 abstract = {Iterative projection algorithms are successfully being used as a substitute of lenses to recombine, numerically rather than optically, light scattered by illuminated objects. Images obtained computationally allow aberration-free diffraction-limited imaging and the possibility of using radiation for which no lenses exist. The challenge of this imaging technique is transferred from the lenses to the algorithms. We evaluate these new computational "instruments" developed for the phase-retrieval problem, and discuss acceleration strategies. {\textcopyright} 2007 American Institute of Physics.},
 author = {Marchesini, S.},
@@ -1243,18 +1253,6 @@ title = {{Analysis of non-iterative phase retrieval based on machine learning}},
 volume = {27},
 year = {2020}
 }
-@article{Clark2012,
-annote = {taking into account partial coherence using a point-spread function convolution kernel},
-author = {Clark, J N and Huang, X and Harder, R and Robinson, I K},
-doi = {10.1038/ncomms1994},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Clark et al. - 2012 - High-resolution three-dimensional partially coherent diffraction imaging.pdf:pdf},
-journal = {Nature Communications},
-pages = {1--6},
-publisher = {Nature Publishing Group},
-title = {{High-resolution three-dimensional partially coherent diffraction imaging}},
-year = {2012}
-}
-
 
 @article{Yao2021,
 abstract = {Ptychography is a rapidly developing scanning microscopy which is able to view the internal structures of samples at a high resolution beyond the illumination size. The achieved spatial resolution is theoretically dose-limited. A broadband source can provide much higher flux compared with a monochromatic source; however, it conflicts with the necessary coherence requirements of this coherent diffraction imaging technique. In this paper, a multi-wavelength reconstruction algorithm has been developed to deal with the broad bandwidth in ptychography. Compared with the latest development of mixed-state reconstruction approach, this multi-wavelength approach is more accurate in the physical model, and also considers the spot size variation as a function of energy due to the chromatic focusing optics. Therefore, this method has been proved in both simulation and experiment to significantly improve the reconstruction when the source bandwidth, illumination size and scan step size increase. It is worth mentioning that the accurate and detailed information of the energy spectrum for the incident beam is not required in advance for the proposed method. Further, we combine multi-wavelength and mixed-state approaches to jointly solve temporal and spatial partial coherence in ptychography so that it can handle various disadvantageous experimental effects. The significant relaxation in coherence requirements by our approaches allows the use of high-flux broadband X-ray sources for high-efficient and high-resolution ptychographic imaging.},
@@ -1282,7 +1280,7 @@ volume = {90},
 year = {2019}
 }
 
-@generic{Harlow2020,
+@article{Harlow2020,
    abstract = {Determining how electrode structure governs the performance of an electrocatalyst requires techniques capable of probing structure at the atomic scale, often in situ and operando. In recent years, there have been numerous advances in the main experimental techniques for determining the structure of the electrochemical interface. In situ/operando synchrotron surface x-ray diffraction measurements are key to investigate the atomic structure of the electrode surfaces as well as understand the structure-reactivity relations in electrocatalysis. Here we discuss some recent improvements that have taken place in surface x-ray diffraction and how we expect them to lead to an enhanced understanding of electrocatalysis.},
    author = {Gary S. Harlow and Edvin Lundgren and María Escudero-Escribano},
    doi = {10.1016/j.coelec.2020.08.005},
@@ -1329,7 +1327,7 @@ year = {2019}
 }
 
 
-@generic{Hejral2021,
+@article{Hejral2021,
    abstract = {Catalysts are materials that accelerate the rate of a desired chemical reaction. As such, they constitute an integral part in many applications ranging from the production of fine chemicals in chemical industry to exhaust gas treatment in vehicles. Accordingly, it is of utmost economic interest to improve catalyst efficiency and performance, which requires an understanding of the interplay between the catalyst structure, the gas phase and the catalytic activity under realistic reaction conditions at ambient pressures and elevated temperatures. In recent years efforts have been made to increasingly develop techniques that allow for investigating model catalyst samples under conditions closer to those of real technical catalysts. One of these techniques is high energy surface x-ray diffraction (HESXRD), which uses x-rays with photon energies typically in the range of 70-80 keV. HESXRD allows a fast data collection of three dimensional reciprocal space for the structure determination of model catalyst samples under operando conditions and has since been used for the investigation of an increasing number of different model catalysts. In this article we will review general considerations of HESXRD including its working principle for different model catalyst samples and the experimental equipment required. An overview over HESXRD investigations performed in recent years will be given, and the advantages of HESXRD with respect to its application to different model catalyst samples will be presented. Moreover, the combination of HESXRD with other operando techniques such as in situ mass spectrometry, planar laser-induced fluorescence and surface optical reflectance will be discussed. The article will close with an outlook on future perspectives and applications of HESXRD.},
    author = {Uta Hejral and Mikhail Shipilin and Johan Gustafson and Andreas Stierle and Edvin Lundgren},
    doi = {10.1088/1361-648X/abb17c},
@@ -1796,13 +1794,7 @@ title = {{Coherence and sampling requirements for diffractive imaging}},
 volume = {101},
 year = {2004}
 }
-@article{Tsigaridas2011,
-author = {Tsigaridas, S and Ponchut, C},
-doi = {10.1088/1748-0221/6/01/C01069},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Tsigaridas, Ponchut - 2011 - MAXIPIX, a fast readout photon-counting X-ray area detector for synchrotron applications.pdf:pdf},
-title = {{MAXIPIX, a fast readout photon-counting X-ray area detector for synchrotron applications}},
-year = {2011}
-}
+
 @article{Kretser2019,
 abstract = {A Scientific Integrity Consortium developed a set of recommended principles and best practices that can be used broadly across scientific disciplines as a mechanism for consensus on scientific integrity standards and to better equip scientists to operate in a rapidly changing research environment. The two principles that represent the umbrella under which scientific processes should operate are as follows: (1) Foster a culture of integrity in the scientific process. (2) Evidence-based policy interests may have legitimate roles to play in influencing aspects of the research process, but those roles should not interfere with scientific integrity. The nine best practices for instilling scientific integrity in the implementation of these two overarching principles are (1) Require universal training in robust scientific methods, in the use of appropriate experimental design and statistics, and in responsible research practices for scientists at all levels, with the training content regularly updated and presented by qualified scientists. (2) Strengthen scientific integrity oversight and processes throughout the research continuum with a focus on training in ethics and conduct. (3) Encourage reproducibility of research through transparency. (4) Strive to establish open science as the standard operating procedure throughout the scientific enterprise. (5) Develop and implement educational tools to teach communication skills that uphold scientific integrity. (6) Strive to identify ways to further strengthen the peer review process. (7) Encourage scientific journals to publish unanticipated findings that meet standards of quality and scientific integrity. (8) Seek harmonization and implementation among journals of rapid, consistent, and transparent processes for correction and/or retraction of published papers. (9) Design rigorous and comprehensive evaluation criteria that recognize and reward the highest standards of integrity in scientific research.},
 author = {Kretser, Alison and Murphy, Delia and Bertuzzi, Stefano and Abraham, Todd and Allison, David B. and Boor, Kathryn J. and Dwyer, Johanna and Grantham, Andrea and Harris, Linda J. and Hollander, Rachelle and Jacobs-Young, Chavonda and Rovito, Sarah and Vafiadis, Dorothea and Woteki, Catherine and Wyndham, Jessica and Yada, Rickey},
@@ -2128,7 +2120,6 @@ file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/
 title = {{Introduction to Bragg Coherent Diffractive Imaging}}
 }
 
-
 @article{Croset2017,
 abstract = {A general and compact formula is established for the form factor of any polyhedron, which involves only the apex coordinates and the apex connections. For large diffusion vector q, the form factor behaves like q-3 for generic directions, but it exhibits q-2 singularities in the directions perpendicular to the edges and q-1 singularities in the directions normal to the faces. General results are established for these singularities. Using a Python implementation, illustrative examples are discussed. The generality of the formula and of its singularities are likely to be important for any discussion of scattering from polyhedral particles.A compact and general formula for the form factor of any polyhedron is given and its singularities are discussed, together with illustrative examples.},
 author = {Croset, Bernard},
@@ -2143,6 +2134,7 @@ title = {{Form factor of any polyhedron: A general compact formula and its singu
 volume = {50},
 year = {2017}
 }
+
 @article{pynx2020FLLK,
 abstract = {Coherent Diffraction Imaging (CDI), a technique where an object is reconstructed from a single (2D or 3D) diffraction pattern, recovers the lost diffraction phases without a priori knowledge of the extent (support) of the object. The uncertainty of the object support can lead to over-fitting and prevents an unambiguous metric evaluation of solutions. We propose to use a ‘free' log-likelihood indicator, where a small percentage of points are masked from the reconstruction algorithms, as an unbiased metric to evaluate the validity of computed solutions, independent of the sample studied. We also show how a set of solutions can be analysed through an eigen-decomposition to yield a better estimate of the real object. Example analysis on experimental data is presented both for a test pattern dataset, and the diffraction pattern from a live cyanobacteria cell. The method allows the validation of reconstructions on a wide range of materials (hard condensed or biological), and should be particularly relevant for 4th generation synchrotrons and X-ray free electron lasers, where large, high-throughput datasets require a method for unsupervised data evaluation.},
 archivePrefix = {arXiv},
@@ -2237,6 +2229,19 @@ abstract = {An iterative method of restoring degraded images was developed by tr
        volume = {79},
         pages = {745},
           doi = {10.1086/111605},
+}
+
+@inproceedings{Schavkan2013,
+   abstract = {Possibilities to use the MAXIPIX 2×2 detector for coherent scattering applications are investigated. This study focuses on X-ray Photon Correlation Spectroscopy experiments. Flatfield measurements show that the MAXIPIX detector pixels respond very inhomogeneously in the X-ray range between 5 and 10 keV most commonly used for coherent scattering experiments. Two colloidal model sample systems are investigated using the MAXIPIX and a direct illumination CCD for comparison. It is demonstrated that the MAXIPIX 2×2 detector is applicable for static and dynamic coherent scattering experiments after flatfield correction.},
+   author = {A. Schavkan and F. Westermeier and A. Zozulya and S. Bondarenko and G. Grübel and C. Schroer and M. Sprung},
+   doi = {10.1088/1742-6596/425/20/202004},
+   issn = {17426596},
+   issue = {PART 20},
+   journal = {Journal of Physics: Conference Series},
+   publisher = {Institute of Physics Publishing},
+   title = {Using the MAXIPIX detector for coherent X-ray scattering applications},
+   volume = {425},
+   year = {2013},
 }
 
 @article{Luke2005,
@@ -2591,6 +2596,71 @@ journal = {Submitted},
 title = {{Atomic-scale identification of the active sites of nanocatalysts}},
 year = {2022}
 }
+
+@article{Schroer2008,
+   author = {C G Schroer and P Boye and J M Feldkamp and J Patommel and A Schropp and A Schwab and S Stephan and M Burghammer},
+   doi = {10.1103/PhysRevLett.101.090801},
+   issue = {August},
+   pages = {1-4},
+   title = {Coherent X-Ray Diffraction Imaging with Nanofocused Illumination},
+   volume = {090801},
+   year = {2008},
+}
+
+@article{Clark2012,
+   author = {J N Clark and X Huang and R Harder and I K Robinson},
+   doi = {10.1038/ncomms1994},
+   journal = {Nature Communications},
+   note = {taking into account partial coherence using a point-spread function convolution kernel},
+   pages = {1-6},
+   publisher = {Nature Publishing Group},
+   title = {High-resolution three-dimensional partially coherent diffraction imaging},
+   year = {2012},
+}
+
+
+@article{Mastropietro2011,
+   abstract = {A detailed characterization of the coherent x-ray wavefront produced by a partially illuminated Fresnel zone plate is presented. We show, by numerical and experimental approaches, how the beam size and the focal depth are strongly influenced by the illumination conditions, while the phase of the focal spot remains constant. These results confirm that the partial illumination can be used for coherent diffraction experiments. Finally, we demonstrate the possibility of reconstructing the complex-valued illumination function by simple measurement of the far field intensity in the specific case of partial illumination.},
+   author = {F. Mastropietro and D. Carbone and A. Diaz and J. Eymery and A. Sentenac and T. H. Metzger and V. Chamard and V. Favre-Nicolin},
+   doi = {10.1364/oe.19.019223},
+   issn = {1094-4087},
+   issue = {20},
+   journal = {Optics Express},
+   pages = {19223},
+   pmid = {21996864},
+   title = {Coherent x-ray wavefront reconstruction of a partially illuminated Fresnel zone plate},
+   volume = {19},
+   year = {2011},
+}
+
+
+@ARTICLE{Basolo2005,
+  author={Basolo, S. and Berar, J.-F. and Boudet, N. and Breugnon, P. and Caillot, B. and Clemens, J.-C. and Delpierre, P. and Dinkespiler, B. and Koudobine, I. and Meessen, C. and Menouni, M. and Mouget, C. and Pangaud, P. and Potheau, R. and Vigeolas, E.},
+  journal={IEEE Transactions on Nuclear Science},
+  title={XPAD: pixel detector for material sciences},
+  year={2005},
+  volume={52},
+  number={5},
+  pages={1994-1998},
+  doi={10.1109/TNS.2005.856818}
+}
+
+@article{Dawiec_2016,
+doi = {10.1088/1748-0221/11/12/P12018},
+url = {https://dx.doi.org/10.1088/1748-0221/11/12/P12018},
+year = {2016},
+month = {dec},
+publisher = {},
+volume = {11},
+number = {12},
+pages = {P12018},
+author = {A. Dawiec and Y. Garreau and J. Bisou and S. Hustache and B. Kanoute and F. Picca and G. Renaud and A. Coati},
+title = {Real-time control of the beam attenuation with XPAD hybrid pixel detector},
+journal = {Journal of Instrumentation},
+abstract = {In order to fully benefit from a beam produced by modern synchrotron light sources, characterised by a wide and continuous energy spectrum, high brightness and a very high intensity, advancement in detector technology has been made over the last decades. However, one of the main limitations of the state-of-the-art counting hybrid pixel detectors is the maximum count-rate that is very often few orders of magnitudes lower than of the incident, reflected or diffracted beam flux. Therefore, direct beam attenuation is mandatory in order to perform the measurements according to the detector's characteristics. In this work we present a major upgrade of a fast attenuation system developed at Synchrotron SOLEIL, which allows for a dynamical change of the beam attenuation as a function of the photon flux received by XPAD S140 photon counting detector. The system performs a cyclic real-time estimation of the flux received by every pixel during acquisition of an image and searches for clusters of at least two pixels that exceed user defined levels of counts/s. The beam attenuation is immediately and automatically changed in order to guarantee that the detector will always operate in its linear range even during a long continuous scan, by acting on the direct attenuators.}
+}
+
+
 @article{Li2020,
 abstract = {We explore the use of continuous scanning during data acquisition for Bragg coherent diffraction imaging, i.e., where the sample is in continuous motion. The fidelity of continuous scanning Bragg coherent diffraction imaging is demonstrated on a single Pt nanoparticle in a flow reactor at 400∘C in an Ar-based gas flowed at 50 ml/min. We show a reduction of 30\% in total scan time compared to conventional step-by-step scanning. The reconstructed Bragg electron density, phase, displacement and strain fields are in excellent agreement with the results obtained from conventional step-by-step scanning. Continuous scanning will allow to minimise sample instability under the beam and will become increasingly important at diffraction-limited storage ring light sources.},
 annote = {Continuous scanning --> We show a reduction of 30\% in total scan time compared to conventional step‑by‑step scanning.},
@@ -2607,6 +2677,7 @@ title = {{Continuous scanning for Bragg coherent X-ray imaging}},
 volume = {10},
 year = {2020}
 }
+
 @article{Doniach1970,
 author = {Doniach, S. and Sunjic, M.},
 file = {:home/david/Documents/PhD/Papers/doniach1970.pdf:pdf},
@@ -4170,6 +4241,13 @@ Palladium–silicon (Pd–Si) is a model system for investigating stress develop
    author = {Favre-Nicolin, Vincent},
    year = {2011},
    file = {HDR-Vincent.pdf:/Users/marieingridrichard/Zotero/storage/6SS86FB4/HDR-Vincent.pdf:application/pdf}
+}
+
+
+@phdthesis{vincentjacques2010,
+   title = {Application de la diffraction cohérente des rayons X à l’étude de défauts topologiques dans les structures atomiques et électroniques},
+   author = {Jacques, Vincent},
+   year = {2010},
 }
 
 @article{chamard_strain_2010,
@@ -7092,7 +7170,7 @@ DOI = {10.3390/cryst11030312}
    title = {The Study of Big Data Tools Usages in Synchrotrons},
    year = {2017},
 }
-@generic{Wang2018,
+@article{Wang2018,
    abstract = {The rapid development of synchrotrons has massively increased the speed at which experiments can be performed, while new techniques have increased the amount of raw data collected during each experiment. While this has created enormous new opportunities, it has also created tremendous challenges for national facilities and users. With the huge increase in data volume, the manual analysis of data is no longer possible. As a result, only a fraction of the data collected during the time- and money-expensive synchrotron beam-time is analyzed and used to deliver new science. Additionally, the lack of an appropriate data analysis environment limits the realization of experiments that generate a large amount of data in a very short period of time. The current lack of automated data analysis pipelines prevents the fine-tuning of beam-time experiments, further reducing their potential usage. These effects, collectively known as the “data deluge,” affect synchrotrons in several different ways including fast data collection, available local storage, data management systems, and curation of the data. This review highlights the Big Data strategies adopted nowadays at synchrotrons, documenting this novel and promising hybridization between science and technology, which promise a dramatic increase in the number of scientific discoveries.},
    author = {Chunpeng Wang and Ullrich Steiner and Alessandro Sepe},
    doi = {10.1002/smll.201802291},
